# qt-1090

./: .gitignore  .qmake.stash  CMakeLists.txt  Makefile  README.md  adsb-constants.h  aircraft-handler.cpp  aircraft-handler.h  crc-handling.cpp  crc-handling.h  device-handler.cpp  device-handler.h  gmap.html  gmap.html-old  http-handler.cpp  http-handler.h  icao-cache.cpp  icao-cache.h  main.cpp  message-handling.cpp  message-handling.h  qt-1090-build-script  qt-1090-installer.iss  qt-1090.cpp  qt-1090.desktop  qt-1090.h  qt-1090.pro  qt-1090.ui  qt-1090_resource.rc  resources.qrc  responder.cpp  responder.h  spectrumviewer.cpp  spectrumviewer.h  syncviewer.cpp  syncviewer.h  xclose.cpp  xclose.h
appimage/: AppRun
cmake/: Toolchain-fedora-mingw64.cmake
devices/airspy-handler/: airspy-handler.cpp  airspy-handler.h
devices/airspy-handler-old/: airspy-handler.cpp  airspy-handler.h
devices/file-handler/: file-handler.cpp  file-handler.h
devices/hackrf-handler/: hackrf-handler.cpp  hackrf-handler.h
devices/lime-handler/: lime-handler.cpp  lime-handler.h
devices/pluto-handler/: pluto-handler.cpp  pluto-handler.h
devices/rtlsdr-handler/: rtlsdr-handler.cpp  rtlsdr-handler.h  rtlsdr-widget.ui
devices/rtltcp-handler/: rtl_tcp-handler.cpp  rtl_tcp-handler.h  rtl_tcp-widget.ui
devices/sdrplay-handler/: sdrplay-handler.cpp  sdrplay-handler.h  sdrplay-widget.ui
devices/sdrplay-handler-v2/: sdrplay-handler-v2.cpp  sdrplay-handler-v2.h  sdrplay-widget-v2.ui
devices/sdrplay-handler-v3/: Rsp-device.cpp  RspDx-handler.cpp  RspII-handler.cpp  sdrplay-handler-v3.cpp  sdrplay-handler-v3.h
map/: converted_map.h  coordinates.cpp  coordinates.h  gmap.html-werkt
qhttpserver/: .qmake.stash  qhttpserver.pro
qhttpserver/src/: Makefile.Debug  Makefile.Release  qhttpconnection.cpp  qhttpresponse.cpp  qhttpserver.cpp  qhttpserver.h
